Backend integration completed

--- a/templates/about.htm
+++ b/templates/about.htm
@@ -4,27 +4,22 @@
 {%block content%}
 <!-- Wrapper -->
     <section id="wrapper">
+        {%for about in abouts%}
         <header>
             <div class="inner">
-                <h2>Generic</h2>
-                <p>Phasellus non pulvinar erat. Fusce tincidunt nisl eget ipsum.</p>
+                <h2>{{about.heading}}</h2>
+                <p>{{about.summary}}</p>
             </div>
         </header>
 
         <!-- Content -->
             <div class="wrapper">
                 <div class="inner">
-
-                    <h3 class="major">Lorem ipsum dolor</h3>
-                    <p>Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur nisi, id malesuada justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus leo donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit accumsan cursus. Etiam ut gravida sapien.</p>
-
-                    <p>Vestibulum ultrices risus velit, sit amet blandit massa auctor sit amet. Sed eu lectus sem. Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis elementum varius.</p>
-
-                    <h3 class="major">Vitae phasellus</h3>
-                    <p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+                    <h3 class="major">{{about.subheading}}</h3>
+                    <p>{{about.body}}</p>
                 </div>
             </div>
-
+        {%endfor%}
     </section>
 {%endblock%}
 {%block footer%}
@@ -32,7 +27,7 @@
     <div class="inner">
         <h2 class="major">Get in touch</h2>
         <p></p>
-        <form action="/about/" method="post">
+        <form method="post" action="/">
             <div class="fields">
                 {%csrf_token%}
                 {%for field in form%}
@@ -47,18 +42,35 @@
             </ul>
         </form>
         <ul class="contact">
+            {%for address in addresses%}
             <li class="icon solid fa-home">
-                Study Help<br />
-                Nairobi, KENYA<br />
+                {{address.p_o_box}}<br />
+                {{address.location}}<br />
             </li>
-            <li class="icon solid fa-phone">+2547 77751299</li>
-            <li class="icon solid fa-envelope"><a href="#">studyhelpbusiness@gmail.com</a></li>
-            <li class="icon brands fa-twitter"><a href="#">twitter.com/studyhelp</a></li>
-            <li class="icon brands fa-facebook-f"><a href="#">facebook.com/studyhelp</a></li>
-            <li class="icon brands fa-instagram"><a href="#">instagram.com/studyhelp</a></li>
+            {%endfor%}
+
+            {%for phone in phone_numbers%}
+            <li class="icon solid fa-phone">{{phone.phone}}</li>
+            {%endfor%}
+            
+            {%for gmail in gmail_links %}
+            <li class="icon solid fa-envelope"><a href="#">{{gmail.link}}</a></li>
+            {%endfor%}
+
+            {%for twitter in twitter_accounts%}
+            <li class="icon brands fa-twitter"><a href="{{twitter.twitter}}">{{twitter.twitter}}</a></li>
+            {%endfor%}
+
+            {%for fb in fb_accounts%}
+            <li class="icon brands fa-facebook-f"><a href="{{fb.facebook}}">{{fb.facebook}}</a></li>
+            {%endfor%}
+
+            {%for ig in instagram_accounts%}
+            <li class="icon brands fa-instagram"><a href="{{ig.ig}}">{{ig.ig}}</a></li>
+            {%endfor%}   
         </ul>
         <ul class="copyright">
-            <li>&copy;<script>document.write(new Date().getFullYear())</script> Study Help. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+            <li>&copy;<script>document.write(new Date().getFullYear())</script> Study Help. All rights reserved.</li><li>Design: <a href="#">HtoStudios</a></li> <li><a href="/privacy_policy/">Privacy policy</a></li><li><a href="/about/">About</a></li>
         </ul>
     </div>
 </section>
