--- a/templates/index.htm
+++ b/templates/index.htm
@@ -6,7 +6,9 @@
 	<!-- Banner -->
     <section id="banner">
         <div class="inner">
-            <h2>Study Help</h2>
+            {%for brand in brands%}
+            <h2>{{brand.text}}</h2>
+            {%endfor%}
             {%for header in headers%}
             <p>{{header.text}}<a href="/create_order/" class="special">Order Now</a></p>
             {%endfor%}
@@ -18,49 +20,31 @@
             <!-- Three -->
                 <section id="three" class="wrapper spotlight style3">
                     <div class="inner">
-                        <a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+                        {%for text in how_we_work_texts%}
                         <div class="content">
                             <h2 class="major">How we work</h2>
-                            <p>You will recieve a draft first, analyze it and after your approval, you will recieve your paper in an editable format. </p>
+                            <p>
+                                {{text.body}} </p>
                             <a href="/create_order/" class="special">Order now</a>
                         </div>
+                        {%endfor%}
                     </div>
                 </section>
-    
             <!-- Four -->
                 <section id="four" class="wrapper alt style1">
                     <div class="inner">
                         <h2 class="major">Samples</h2>
                         <p>Have a look at our previous works</p>
                         <section class="features">
+                            {%for sample in samples%}
                             <article>
                                 <a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-                                <h3 class="major">Sed feugiat lorem</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-                                <a href="#" class="special">Learn more</a>
+                                <h3 class="major">{{sample.title}}</h3>
+                                <p>{{sample.snippet}}</p>
+                                <a href="{{sample.file.url}}" class="special">View Paper</a>
                             </article>
-                            <article>
-                                <a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-                                <h3 class="major">Nisl placerat</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-                                <a href="#" class="special">Learn more</a>
-                            </article>
-                            <article>
-                                <a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-                                <h3 class="major">Ante fermentum</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-                                <a href="#" class="special">Learn more</a>
-                            </article>
-                            <article>
-                                <a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-                                <h3 class="major">Fusce consequat</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-                                <a href="#" class="special">Learn more</a>
-                            </article>
+                            {%endfor%}
                         </section>
-                        <ul class="actions">
-                            <li><a href="#" class="button">Browse All</a></li>
-                        </ul>
                     </div>
                 </section>    
     </section>
@@ -86,18 +70,35 @@
             </ul>
         </form>
         <ul class="contact">
+            {%for address in addresses%}
             <li class="icon solid fa-home">
-                Study Help<br />
-                Nairobi, KENYA<br />
+                {{address.p_o_box}}<br />
+                {{address.location}}<br />
             </li>
-            <li class="icon solid fa-phone">+2547 77751299</li>
-            <li class="icon solid fa-envelope"><a href="#">studyhelpbusiness@gmail.com</a></li>
-            <li class="icon brands fa-twitter"><a href="#">twitter.com/studyhelp</a></li>
-            <li class="icon brands fa-facebook-f"><a href="#">facebook.com/studyhelp</a></li>
-            <li class="icon brands fa-instagram"><a href="#">instagram.com/studyhelp</a></li>
+            {%endfor%}
+
+            {%for phone in phone_numbers%}
+            <li class="icon solid fa-phone">{{phone.phone}}</li>
+            {%endfor%}
+            
+            {%for gmail in gmail_links %}
+            <li class="icon solid fa-envelope"><a href="#">{{gmail.link}}</a></li>
+            {%endfor%}
+
+            {%for twitter in twitter_accounts%}
+            <li class="icon brands fa-twitter"><a href="{{twitter.twitter}}">{{twitter.twitter}}</a></li>
+            {%endfor%}
+
+            {%for fb in fb_accounts%}
+            <li class="icon brands fa-facebook-f"><a href="{{fb.facebook}}">{{fb.facebook}}</a></li>
+            {%endfor%}
+
+            {%for ig in instagram_accounts%}
+            <li class="icon brands fa-instagram"><a href="{{ig.ig}}">{{ig.ig}}</a></li>
+            {%endfor%}   
         </ul>
         <ul class="copyright">
-            <li>&copy;<script>document.write(new Date().getFullYear())</script> Study Help. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+            <li>&copy;<script>document.write(new Date().getFullYear())</script> Study Help. All rights reserved.</li><li>Design: <a href="#">HtoStudios</a></li> <li><a href="/privacy_policy/">Privacy policy</a></li><li><a href="/about/">About</a></li>
         </ul>
     </div>
 </section>
