--- a/templates/create_order.htm
+++ b/templates/create_order.htm
@@ -40,7 +40,7 @@
 <section id="footer">
     <div class="inner">
         <ul class="copyright">
-            <li>&copy;<script>document.write(new Date().getFullYear())</script> Study Help. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+            <li>&copy;<script>document.write(new Date().getFullYear())</script> Study Help. All rights reserved.</li><li>Design: <a href="#">Webspace</a></li>
         </ul>
     </div>
 </section>
