--- a/templates/refund_policy.htm
+++ b/templates/refund_policy.htm
@@ -63,7 +63,7 @@
             <li class="icon brands fa-instagram"><a href="#">instagram.com/studyhelp</a></li>
         </ul>
         <ul class="copyright">
-            <li>&copy;<script>document.write(new Date().getFullYear())</script> Study Help. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+            <li>&copy;<script>document.write(new Date().getFullYear())</script> Study Help. All rights reserved.</li><li>Design: <a href="#">Webspace</a></li>
         </ul>
     </div>
 </section>
