--- a/templates/dashboard.htm
+++ b/templates/dashboard.htm
@@ -41,7 +41,7 @@
                             <thead>
                                 <tr>
                                     <th>Date</th>
-                                    <th>Refrence code</th>
+                                    <th>Reference code</th>
                                     <th>Subject</th>
                                 </tr>
                             </thead>
@@ -54,8 +54,8 @@
                                 {% for order in current_orders %}
                                 <tr>
                                     <td>{{order.date_created}}</td>
-                                    <td>{{order.refrence_code}}</td>
-                                    <td>{{order.subject}}</td>
+                                    <td>{{order.reference_code}}</td>
+                                    <td>{{order.get_subject_display}}</td>
                                 </tr>
                                 {% endfor %}
                                 {% endif %}
@@ -76,7 +76,7 @@
                             <thead>
                                 <tr>
                                     <th>Date</th>
-                                    <th>Refrence code</th>
+                                    <th>Reference code</th>
                                     <th>Subject</th>
                                 </tr>
                             </thead>
@@ -89,8 +89,8 @@
                                 {% for order in completed_orders %}
                                 <tr>
                                     <td>{{order.date_created}}</td>
-                                    <td>{{order.refrence_code}}</td>
-                                    <td>{{order.subject}}</td>
+                                    <td>{{order.reference_code}}</td>
+                                    <td>{{order.get_subject_display}}</td>
                                 </tr>
                                 {% endfor %}
                                 {% endif %}
