--- a/templates/base_layout.htm
+++ b/templates/base_layout.htm
@@ -91,6 +91,7 @@
 								<li><a href="/create_order/">Order</a></li>
 								{%if request.user.is_authenticated%}
 								<li><a href="/dashboard/">Dashboard</a></li>
+								<li><a href="/accounts/logout/">Logout</a></li>
 								{% else %}
 								<li><a href="/accounts/login/">Login</a></li>
 								<li><a href="/accounts/signup/">Signup</a></li>
