finished everything starting paypal

--- a/templates/base_layout.htm
+++ b/templates/base_layout.htm
@@ -54,6 +54,16 @@
 			.my-float{
 				margin-top:16px;
 			}
+			ul.errorlist {
+				list-style: none;
+			}
+			ul.errorlist > li {
+				color: #fff;
+				background-color: rgb(219, 85, 85);
+				text-align: center;
+				border-radius: 10px;
+				padding: 12px;
+			}
 		</style>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         {%endblock%}
