--- a/templates/dashboard.htm
+++ b/templates/dashboard.htm
@@ -155,7 +155,7 @@
             {%endfor%}
             
             {%for number in whatsapp%}
-            <li class="icon brands fa-whatsapp"><a href="https://api.whatsapp.com/send?phone={{number.number}}">{{number.number}}</a></li>
+            <li class="icon brands fa-whatsapp">+<a href="https://api.whatsapp.com/send?phone={{number.number}}">{{number.number}}</a></li>
             {%endfor%}
         </ul>
         <ul class="copyright">
