updated how we work model

--- a/templates/create_order.htm
+++ b/templates/create_order.htm
@@ -39,7 +39,7 @@
                 <div class="content">
                     <h2 class="major">How we work</h2>
                     <p>
-                        {{text.body}} </p>
+                        {{text.introduction}} </p>
                     <a href="/create_order/" class="special">Order now</a>
                 </div>
                 {%endfor%}
