Added privacy policy

--- a/templates/index.htm
+++ b/templates/index.htm
@@ -87,6 +87,7 @@
         <section id="three" class="wrapper spotlight style3">
             <div class="inner">
                 {%for text in how_we_work_texts%}
+                <a href="#" class="image"><img src="images/pic01.jpg" alt=""></a>
                 <div class="content">
                     <h2 class="major">How we work</h2>
                     <p>
@@ -176,3 +177,7 @@
     </div>
 </section>
 {%endblock%}
+
+
+
+Fill in the Order form detailing your requirements and specifications. Verify whether you have filled out the details properly and submit the form. Once your order has been approved, you will receive a confirmation and you are good to go. You can now log on to the dashboard page and you will find a reference code to your order. Copy the code and text it to our official WhatsApp number and our support team will review the order instructions and assign it to a qualified expert to help you with your assignment. Use the code to track your order's progress, additional instructions and price negotiations.
