--- a/templates/create_order.htm
+++ b/templates/create_order.htm
@@ -141,7 +141,7 @@
         </form>
         <ul class="copyright">
             <li>&copy;<script>document.write(new Date().getFullYear())</script> Study Help. All rights reserved.</li> 
-            <li><a href="/privacy_policy/">Privacy policy</a></li>
+            <li><a href="/revision_policy/">Revision policy</a></li>
             <li><a href="/about/">About</a></li>
             <li><a href="/create_order/">Order</a></li>
             <li><a href="/samples/">Samples</a></li>
