completed Faq section

--- a/templates/create_order.htm
+++ b/templates/create_order.htm
@@ -40,7 +40,7 @@
                     <h2 class="major">How we work</h2>
                     <p>
                         {{text.introduction}} </p>
-                    <a href="/create_order/" class="special">Order now</a>
+                    <a href="/how_we_work/" class="special">More</a>
                 </div>
                 {%endfor%}
             </div>
@@ -141,7 +141,9 @@
         </form>
         <ul class="copyright">
             <li>&copy;<script>document.write(new Date().getFullYear())</script> Study Help. All rights reserved.</li> 
+            <li><a href="/how_we_work/">How we work</a></li> 
             <li><a href="/revision_policy/">Revision policy</a></li>
+            <li><a href="/refund_policy/">Refund policy</a></li>
             <li><a href="/about/">About</a></li>
             <li><a href="/create_order/">Order</a></li>
             <li><a href="/samples/">Samples</a></li>
