--- a/templates/revision_policy.htm
+++ b/templates/revision_policy.htm
@@ -24,7 +24,7 @@
     <div class="inner">
         <div class="logo"><span class="icon fa-gem"></span></div>
         {%for brand in brands%}
-        <h2>{{brand.text}} Privacy policy</h2>
+        <h2>{{brand.text}} Revision policy</h2>
         {%endfor%}
         {%for header in headers%}
         <p>{{header.text}}<a href="/create_order/" class="special">Order Now</a></p>
@@ -38,7 +38,7 @@
             <div class="inner">
                 {%for intro in introductions%}
                 <div class="content">
-                    <h2>Privacy Policy</h2>
+                    <h2>Revision Policy</h2>
                     <p>{{intro.body}}</p>
                 </div>
                 {%endfor%}
@@ -139,8 +139,10 @@
             {%endfor%}
         </ul>
         <ul class="copyright">
-            <li>&copy;<script>document.write(new Date().getFullYear())</script> Study Help. All rights reserved.</li> 
+            <li>&copy;<script>document.write(new Date().getFullYear())</script> Study Help. All rights reserved.</li>
+            <li><a href="/how_we_work/">How we work</a></li> 
             <li><a href="/revision_policy/">Revision policy</a></li>
+            <li><a href="/refund_policy/">Refund policy</a></li>
             <li><a href="/about/">About</a></li>
             <li><a href="/create_order/">Order</a></li>
             <li><a href="/samples/">Samples</a></li>
@@ -149,7 +151,3 @@
     </div>
 </section>
 {%endblock%}
-
-
-
-Fill in the Order form detailing your requirements and specifications. Verify whether you have filled out the details properly and submit the form. Once your order has been approved, you will receive a confirmation and you are good to go. You can now log on to the dashboard page and you will find a reference code to your order. Copy the code and text it to our official WhatsApp number and our support team will review the order instructions and assign it to a qualified expert to help you with your assignment. Use the code to track your order's progress, additional instructions and price negotiations.
