--- a/templates/about.htm
+++ b/templates/about.htm
@@ -28,6 +28,18 @@
                 </div>
             </div>
         {%endfor%}
+        <!-- Two -->
+        <section id="two" class="wrapper alt  style2">
+            <div class="inner">
+                <h2 class="major">Frequently Asked Questions</h2>
+                <div class="content">
+                    {%for question in questions%}
+                    <h2 class="major">{{question.question}}</h2>
+                    <p>{{question.answer}}</p>
+                    {%endfor%}
+                </div>
+            </div>
+        </section>
     </section>
 {%endblock%}
 {%block footer%}
@@ -83,8 +95,10 @@
 
         </ul>
         <ul class="copyright">
-            <li>&copy;<script>document.write(new Date().getFullYear())</script> Study Help. All rights reserved.</li> 
+            <li>&copy;<script>document.write(new Date().getFullYear())</script> Study Help. All rights reserved.</li>
+            <li><a href="/how_we_work/">How we work</a></li>  
             <li><a href="/revision_policy/">Revision policy</a></li>
+            <li><a href="/refund_policy/">Refund policy</a></li>
             <li><a href="/about/">About</a></li>
             <li><a href="/create_order/">Order</a></li>
             <li><a href="/samples/">Samples</a></li>
