--- a/templates/order_files.htm
+++ b/templates/order_files.htm
@@ -69,8 +69,10 @@
             </div>
         </form>
         <ul class="copyright">
-            <li>&copy;<script>document.write(new Date().getFullYear())</script> Study Help. All rights reserved.</li> 
+            <li>&copy;<script>document.write(new Date().getFullYear())</script> Study Help. All rights reserved.</li>
+            <li><a href="/how_we_work/">How we work</a></li> 
             <li><a href="/revision_policy/">Revision policy</a></li>
+            <li><a href="/refund_policy/">Refund policy</a></li>
             <li><a href="/about/">About</a></li>
             <li><a href="/create_order/">Order</a></li>
             <li><a href="/samples/">Samples</a></li>
