Added Add files button

--- a/templates/order_description.htm
+++ b/templates/order_description.htm
@@ -106,6 +106,7 @@
                 {% endif %}
                 {% else %}
                 <li><a href="/dashboard/" class="button fit">Back</a></li>
+                <li><a href="/order_files/" class="button primary fit">Add Files</a></li>
                 {% endif %}
             </ul>
         </div>
